feat: we can see home.ejs with some random products

--- a/starter-code/views/home/home.ejs
+++ b/starter-code/views/home/home.ejs
@@ -1,1 +1,19 @@
-<div>Hello</div>
+<div>Ironhack Products:</div>
+
+<div class="col-md-2 column productbox">
+    <img src="https://preview.ibb.co/iFfiqn/2018_02_17_19_39_42.jpg" class="img-responsive">
+    <div class="producttitle">Product 2</div>
+    <div class="productprice"><div class="pull-right"><a href="#" class="btn btn-danger btn-sm" role="button">BUY</a></div><div class="pricetext">£8.95</div></div>
+</div>
+
+<div class="col-md-2 column productbox">
+    <img src="https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/4017/s300/logo-ironhack-blue.png" class="img-responsive">
+    <div class="producttitle">Product 2</div>
+    <div class="productprice"><div class="pull-right"><a href="#" class="btn btn-danger btn-sm" role="button">BUY</a></div><div class="pricetext">£8.95</div></div>
+</div>
+
+<div class="col-md-2 column productbox">
+    <img src="https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/4017/s300/logo-ironhack-blue.png" class="img-responsive">
+    <div class="producttitle">Product 2</div>
+    <div class="productprice"><div class="pull-right"><a href="#" class="btn btn-danger btn-sm" role="button">BUY</a></div><div class="pricetext">£8.95</div></div>
+</div>
