--- a/starter-code/views/home/home.ejs
+++ b/starter-code/views/home/home.ejs
@@ -12,8 +12,9 @@
     <div class="productprice"><div class="pull-right"><a href="#" class="btn btn-danger btn-sm" role="button">BUY</a></div><div class="pricetext">£8.95</div></div>
 </div>
 
-<div class="col-md-2 column productbox">
-    <img src="https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/4017/s300/logo-ironhack-blue.png" class="img-responsive">
-    <div class="producttitle">Product 2</div>
-    <div class="productprice"><div class="pull-right"><a href="#" class="btn btn-danger btn-sm" role="button">BUY</a></div><div class="pricetext">£8.95</div></div>
-</div>
+<hr>
+<hr>
+
+<% for (let i=1; i<11; i++) { %>
+       <h1>Ironhack Product nº <%= i %> </h1>
+<% } %>
