--- a/starter-code/views/cart/shopping-cart.ejs
+++ b/starter-code/views/cart/shopping-cart.ejs
@@ -4,7 +4,7 @@
         <hr>
         <div class="panel panel-default">
           <div class="panel-heading text-center">
-            Dont't have an IronAccount?
+            <p>Dont't have an IronAccount?</p>
             <a href="/signup">Sign up to enter your credentials</a>
           </div>
         </div>
