--- a/starter-code/views/auth/login.ejs
+++ b/starter-code/views/auth/login.ejs
@@ -1,48 +1,64 @@
-<div class="row">
-  <div class="col-xs-12 col-sm-4 col-sm-offset-4">
-    <!-- <% if (typeof(flash) !== 'undefined' && flash.info) { %>
-      <div class="alert alert-info">
-        <%= flash.info %>
-      </div>
-    <% } %> -->
-    <form action="/login" method="POST">
-      <div class="form-group <%= typeof error != 'undefined' && error.email ? 'has-error' : '' %>">
-        <div class="input-group">
-          <span class="input-group-addon">
-            <i class="glyphicon glyphicon-envelope"></i>
-          </span>
-          <input type="text" name="email" class="form-control" placeholder="email" value="<%= typeof user != 'undefined' && user.email ? user.email : '' %>">
+<div class="container">
+    <form class="form-horizontal" role="form" method="POST" action="/login">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <h2>Login</h2>
+                <hr>
+            </div>
         </div>
-        <!-- <% if (typeof(error) != 'undefined' && error.email) { %>
-          <label class="control-label"> <%= error.email %> </label>
-        <% } %> -->
-      </div>
-
-      <div class="form-group <%= typeof error != 'undefined' && error.password ? 'has-error' : '' %>">
-        <div class="input-group">
-          <span class="input-group-addon">
-            <i class="fa fa-lock"></i>
-          </span>
-          <input type="password" name="password" class="form-control" placeholder="Password">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <div class="form-group has-danger">
+                    <label class="sr-only" for="email">Email Address</label>
+                    <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                        <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
+                        <input type="text" name="email" class="form-control" id="email"
+                               placeholder="you@example.com" required autofocus>
+                    </div>
+                </div>
+            </div>
+  <!-- Meter el if de error para que se muestre el mensaje error -->    
+            <div class="col-md-3">
+                <div class="form-control-feedback">
+                    <span class="text-danger align-middle">
+                        <!--<i class="fa fa-close"></i> Example error message-->
+                    </span>
+                </div>
+            </div>
         </div>
-        <!-- <% if (typeof(error) != 'undefined' && error.password) { %>
-          <label class="control-label"><%= error.password %></label>
-        <% } %> -->
-      </div>
-
-      <div class="form-actions">
-        <button type="submit" class="btn btn-block btn-primary">IronLogin</button>
-      </div>
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label class="sr-only" for="password">Password</label>
+                    <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                        <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key"></i></div>
+                        <input type="password" name="password" class="form-control" id="password"
+                               placeholder="Password" required>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-control-feedback">
+                    <span class="text-danger align-middle">
+                    <!-- Put password error message here -->    
+                    </span>
+                </div>
+            </div>
+        </div>
+        
+        <div class="row" style="padding-top: 1rem">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <button type="submit" class="btn btn-success"><i class="fa fa-sign-in"></i> Login</button><br><br>
+                <span>
+                  <p class="d-inline-block">Dont't have an IronAccount?</p>
+                  <a class="btn btn-link" href="/signup">Sign up</a>
+                </span>
+                
+            </div>
+        </div>
     </form>
-
-  </div>
-  <div class="col-xs-12 col-sm-4 col-sm-offset-4">
-    <hr>
-    <div class="panel panel-default">
-      <div class="panel-heading text-center">
-        Dont't have an IronAccount?
-        <a href="/signup">Sign up </a>
-      </div>
-    </div>
-  </div>
 </div>
