--- a/starter-code/views/layouts/main.ejs
+++ b/starter-code/views/layouts/main.ejs
@@ -8,7 +8,6 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
         crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
 </head>
 <body>
 
@@ -45,7 +44,7 @@
                       <h7 class="navbar-text" margin-right = 4px>Hello <%=session.name%> </h7>
                     </div>
                     <a href="/logout" class="btn btn-outline-secondary">Log out</a>
-                    <a href="/shoppingCart" class="btn btn-outline-secondary">Shopping Cart</a>
+                    <a href="/shoppingCart" class="fa fa-cart">Shopping Cart</a>
                 </div>
             <% } %>
         </nav> 
