feat: better edit styles bootstrap 4 and upload photos

--- a/starter-code/views/home/edit.ejs
+++ b/starter-code/views/home/edit.ejs
@@ -1,8 +1,9 @@
 <div class="container">
+  <br>
   <h2>Hello Admin</h2>
-<hr>
+  <hr>
   <p>Here you will be able to edit all your IronProducts</p>
-  <table class="table tablestriped">
+  <table class="table table-striped">
     <thead>
         <tr>
           <th>Name</th>
@@ -16,11 +17,11 @@
       <% listOfProducts.forEach((product) => { %>
       <tr>
           <form action="/updateProduct/<%=product._id%>" method="POST">
-            <td class='hide'><input value="<%=product.name%>" name="name"></input></td>
-            <td class='hide'><input value="<%=product.image%>" name="image"></input></td>
-            <td class='hide'><input value="<%=product.color%>" name="color"></input></td>
-            <td class='hide'><input value="<%=product.price%>" name="price"></input></td>
-            <td class='hide'><button type="submit" >Save</button></td>
+            <td class='d-none'><input value="<%=product.name%>" name="name"></input></td>
+            <td class='d-none'><input value="<%=product.image%>" name="image"></input></td>
+            <td class='d-none'><input value="<%=product.color%>" name="color"></input></td>
+            <td class='d-none'><input value="<%=product.price%>" name="price"></input></td>
+            <td class='d-none'><button type="submit" >Save</button></td>
           </form>
           <td><%=product.name%></td>
           <td><%=product.image%></td>
@@ -34,24 +35,25 @@
 </div>
 <br>
 <hr>
-
-<h3>Here you can add a new product</h3><br>
-<form class="form-horizontal" action="/edit" method= "POST">
-  <div class="form-group">
-    <label class="control-label col-sm-2">Name:</label>
-    <input type="text" placeholder="Enter name" name="name" width="100%">
-  </div>
-  <div class="form-group">
-    <label class="control-label col-sm-2">Image URL:</label>
-    <input type="text" placeholder="Enter image URL" name="image" width="100%">
-  </div>
-  <div class="form-group">
-    <label class="control-label col-sm-2">Color:</label>
-    <input type="text" placeholder="Enter product color" name="color" width="100%">
-  </div>
-  <div class="form-group">
-    <label class="control-label col-sm-2">Price:</label>
-    <input type="text" placeholder="Enter price" name="price" width="100%">
-  </div>
-  <button type="submit" class="col-sm-4">Save product</input>
-</form>
+<div class="container">
+  <h3>Here you can add a new product</h3><br>
+  <form class="form-horizontal" action="/edit" method= "POST">
+    <div class="form-group">
+      <label class="control-label col-sm-2">Name:</label>
+      <input type="text" placeholder="Enter name" name="name" width="100%">
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2">Image URL:</label>
+      <input type="text" placeholder="Enter image URL" name="image" width="100%">
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2">Color:</label>
+      <input type="text" placeholder="Enter product color" name="color" width="100%">
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2">Price:</label>
+      <input type="text" placeholder="Enter price" name="price" width="100%">
+    </div>
+    <button type="submit" class="col-sm-4">Save product</input>
+  </form>
+</div>
