--- a/starter-code/views/layouts/main.ejs
+++ b/starter-code/views/layouts/main.ejs
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="shortcut icon" href="/favicon.ico" />
     <script type="text/javascript" src="javascript/editProduct.js"></script>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" src="/stylesheets/style.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
         crossorigin="anonymous">
 
