--- a/starter-code/views/home/edit.ejs
+++ b/starter-code/views/home/edit.ejs
@@ -22,15 +22,15 @@
             <td class='d-none'><input value="<%=product.image%>" name="image"></input></td>
             <td class='d-none'><input value="<%=product.color%>" name="color"></input></td>
             <td class='d-none'><input value="<%=product.price%>" name="price"></input></td>
-            <td class='d-none'><button type="submit" >Save</button></td>
+            <td class='d-none'><button class="btn-info" type="submit" >Save</button></td>
           </form>
           <td><%=product.name%></td>
           <td><%=product.image%></td>
           <td><%=product.color%></td>
           <td><%=product.price%></td>
-          <td><button class="editButton" type="btn btn-primary">Edit</button></td>
+          <td><button class="editButton btn ironColor" type="btn btn-primary">Edit</button></td>
           <td><form action="/deleteProduct/<%= product._id %>" method="POST">
-            <button type="submit">Delete</button></form>
+            <button class="editButton btn btn-danger" type="submit">Delete</button></form>
           </td>
       </tr>
       <% }) %>
@@ -47,7 +47,7 @@
       <input type="text" placeholder="Enter name" name="name" width="100%">
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2">Image URL:</label>
+      <label class="control-label col-sm-2">Image:</label>
       <input type="text" placeholder="Enter image URL" name="image" width="100%">
     </div>
     <div class="form-group">
@@ -58,7 +58,7 @@
       <label class="control-label col-sm-2">Price:</label>
       <input type="text" placeholder="Enter price" name="price" width="100%">
     </div>
-    <button type="submit" class="col-sm-4">Save product</input>
+    <button type="submit" class="btn ironColor">Save product</input>
   </form>
 </div>
 <br><br>
