feat: terminada pag de productos estilo

--- a/starter-code/views/auth/login.ejs
+++ b/starter-code/views/auth/login.ejs
@@ -18,7 +18,7 @@
           <div class="form-group has-danger">
             <label class="sr-only" for="email">Email Address</label>
             <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-              <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
+              <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at mt-2"></i></div>
               <input type="text" name="email" class="form-control" id="email" placeholder="you@example.com" required autofocus>
             </div>
           </div>
@@ -38,7 +38,7 @@
             <div class="form-group">
                 <label class="sr-only" for="password">Password</label>
                 <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                    <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key"></i></div>
+                    <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key mt-2"></i></div>
                     <input type="password" name="password" class="form-control" id="password"
                             placeholder="Password" required>
                 </div>
