--- a/starter-code/views/auth/signup.ejs
+++ b/starter-code/views/auth/signup.ejs
@@ -17,7 +17,7 @@
                 <div class="form-group has-danger">
                     <label class="sr-only">Name</label>
                     <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                        <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-user align-middle"></i></div>
+                        <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-user mt-2"></i></div>
                         <input type="text" name="name" class="form-control" id="name"
                             placeholder="Name" required autofocus>
                     </div>
@@ -39,7 +39,7 @@
                 <div class="form-group has-danger">
                     <label class="sr-only" for="email">Email Address</label>
                     <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                        <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at align-middle"></i></div>
+                        <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at mt-2"></i></div>
                         <input type="text" name="email" class="form-control" id="email"
                             placeholder="you@example.com" required autofocus>
                     </div>
@@ -62,7 +62,7 @@
                 <div class="form-group">
                     <label class="sr-only" for="password">Password</label>
                     <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                        <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key align-middle"></i></div>
+                        <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key mt-2"></i></div>
                         <input type="password" name="password" class="form-control" id="password"
                                 placeholder="Password" required>
                     </div>
@@ -84,7 +84,7 @@
                 <div class="form-group has-danger">
                     <label class="sr-only">Shipping Address</label>
                     <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                        <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-road align-middle"></i></div>
+                        <div class="input-group-addon" style="width: 2.6rem"><i class="fas fa-location-arrow mt-2"></i></div>
                         <input type="text" name="address" class="form-control" id="address"
                             placeholder="Calle Lilas, 17, 28223, Madrid, Spain" required autofocus>
                     </div>
@@ -114,7 +114,7 @@
         <div class="row" style="padding-top: 1rem">
             <div class="col-md-3"></div>
             <div class="col-md-6">
-                <button type="submit" class="btn btn-success">Sign up</button>
+                <button type="submit" class="btn btn-success"><i class="fas fa-sign-in"></i> Sign up</button>
                 <br>
                 <span>
                     <p class="d-inline-block">Already have an IronAccount?</p>
