--- a/starter-code/views/cart/shopping-cart.ejs
+++ b/starter-code/views/cart/shopping-cart.ejs
@@ -1,41 +1,51 @@
-<%if(typeof(session) === 'undefined'){%>
-
-    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
-        <hr>
-        <div class="panel panel-default">
-          <div class="panel-heading text-center">
-            <p>Dont't have an IronAccount?</p>
-            <a href="/signup">Sign up to enter your credentials</a>
-          </div>
-        </div>
-      </div>
-
-<%}else{%>
-
-    <div>
-        <span>This is your shipment information></span>
-        <br>    
-        <span>Nombre: <%=session.name%></span>
-        <br>
-        <span>Email: <%=session.email%></span>
-        <br>
-        <span>Adress: <%=session.address%></span>
-        <br>
-        <span>Payment method: <%=session.paymentMethod%></span>
-        <br><br>
-        <br>
-        <br>
+<div class="container-fluid w-40">
+    <div class="table-responsive mt-3">
+        <h6><%=session.name%>'s shipping information</h6>
+        <table class="table table-sm">
+            <tbody>
+                <tr class="">
+                    <td class="d-inline-block" style="vertical-align:middle; width:80px "><h8><small>Name</small></h8>
+                    <td class="d-inline-block" style="vertical-align:middle; width:300px"><h8><small><%=session.name%></small></h8>
+                </tr>
+                <tr>
+                    <td class="d-inline-block" style="vertical-align:middle; width:80px"><h8><small>Email</small></h8>
+                    <td class="d-inline-block" style="vertical-align:middle; width:300px"><h8><small><%=session.email%></small></h8>
+                </tr>
+                <tr>
+                    <td class="d-inline-block" style="vertical-align:middle; width:80px"><h8><small>Addres</small></h8>
+                    <td class="d-inline-block" style="vertical-align:middle; width:300px"><h8><small><%=session.address%></small></h8>
+                </tr>
+            </tbody>
+        </table>
     </div>
-    
-<%}%>
-<div>
-    <p>CARRITO DE PRODUCTOS</p>
-    <% shoppingCart.productsArray.forEach((productObject) => { %>
-        <span>Product name: <%=productObject.name%></span>
-        <span>Product price: <%=productObject.price%></span>
-        <br>
-    <%}); %>
-    <br>
-    <span>TOTAL PRICE: <%=shoppingCart.totalCartPrice%></span>
-    <br>
 </div>
+
+    
+<div class="text-center">
+    <div class = "w-75 d-inline-block">
+        <h6 class="mb-4"><%=session.name%>'s Shopping Cart</h6>
+        <div class="table-responsive">
+            <table class="table table-hover">
+                <tbody>
+                <% shoppingCart.productsArray.forEach((productObject) => { %>    
+                    <tr>
+                        <td style="vertical-align:middle"><img src="<%=productObject.image%>" style="width:50px"></td>
+                        <td style="vertical-align:middle"><%=productObject.name%></td>
+                        <td style="vertical-align:middle"><%=productObject.color%></td>
+                        <td style="vertical-align:middle"><%=productObject.price%></td>
+                        <td style="vertical-align:middle"><form action="/removeFromCart/<%=productObject.name%>" method="GET">
+                            <button class="editButton btn btn-sm btn-outline-secondary" type="submit"><i class="far fa-trash-alt"></i></button></form>
+                        </td>
+                    </tr>
+                    </tbody>
+                <% }); %>    
+            </table>
+            <div>
+                <a href="/ckeckOut" 
+                class="btn btn-success float-right mb-5" >Check out</a>
+                <h6 class="float-right mt-1 mr-4">The total price is:&nbsp&nbsp<%= shoppingCart.totalCartPrice%></h6>
+            </div>    
+        </div>
+    </div>
+</div>
+
