--- a/starter-code/views/home/home.ejs
+++ b/starter-code/views/home/home.ejs
@@ -12,12 +12,10 @@
                 <div class="pt-2">
                     <span class="pt-2 text-dark"><%= product.name %></span>
                     <p class="text-dark text-center"><%= product.price %>€</span><br>
-                    <a href="/add-to-cart/<%= product.name %>/<%= product.price %>" 
-                        class="btn btn-outline-success btn-sm float-right mb-5" ><i class="fas fa-cart-plus"></i></a>
+                    <a href="/add-to-cart/<%= product.name %>" 
+                        class="btn btn-outline ironColor btn-sm float-right mb-5" ><i class="fas fa-cart-plus"></i></a>
                 </div>
-
             </div>
         </div>
-    <% }) %>
+    <% }); %>
 </div>
-
