--- a/starter-code/views/layouts/main.ejs
+++ b/starter-code/views/layouts/main.ejs
@@ -38,7 +38,7 @@
                 <div class = "text-center align-middle">
                     <a href="/login" class="btn btn-outline-secondary">Log in</a>
                     <a href="/signup" class="btn btn-outline-secondary">Sign up</a>
-                    <a href="/shoppingCart" class="btn btn-outline-secondary"><i class="fas fa-cart-arrow-down"></i></a>
+                    <a href="/shoppingCart" class="btn btn-outline ironColor"><i class="fas fa-cart-arrow-down"></i></a>
                 </div>
 
             <% }else{ %>
@@ -57,7 +57,7 @@
                     <div class= "d-inline-block align-middle">
                       <h7 class="navbar-text" margin-right = 4px>Hello <%=session.name%>&nbsp&nbsp</h7>
                     </div>
-                    <a href="/shoppingCart" class="btn btn-outline-secondary mr-2"><i class="fas fa-cart-arrow-down"></i></a>
+                    <a href="/shoppingCart" class="btn btn-outline ironColor mr-2"><i class="fas fa-cart-arrow-down"></i></a>
                     <a href="/logout" class="btn btn-outline-secondary"><i class="fas fa-sign-out-alt"></i></a>
                 </div>
             <% } %>
