feat: small fixes, and style change

--- a/starter-code/public/stylesheets/style.css
+++ b/starter-code/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-body h1 h2 td tr div div.container{
+body h1 h2 h4 td tr div div.container{
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
 }
@@ -10,4 +10,8 @@ body h1 h2 td tr div div.container{
 .ironColor{
   background-color: #32c3ff;
   color: white;
+}
+.ironFont{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
 }
