--- a/starter-code/views/home/edit.ejs
+++ b/starter-code/views/home/edit.ejs
@@ -22,7 +22,7 @@
             <td class='d-none'><input value="<%=product.image%>" name="image"></input></td>
             <td class='d-none'><input value="<%=product.color%>" name="color"></input></td>
             <td class='d-none'><input value="<%=product.price%>" name="price"></input></td>
-            <td class='d-none'><button class="btn-info" type="submit" >Save</button></td>
+            <td class='d-none'><button class="btn btn-info" type="submit" >Save</button></td>
           </form>
           <td><%=product.name%></td>
           <td><%=product.image%></td>
