--- a/starter-code/views/home/home.ejs
+++ b/starter-code/views/home/home.ejs
@@ -1,6 +1,6 @@
 <hr>
 <div class="container bootstrap snipets">
-    <h4 class="text-center text-muted">Iron Hacker Must Have</h4>
+    <h4 id="ironFont" class="text-center text-muted">Every #Ironhacker must have</h4>
 </div>
 <hr>
 <br>
@@ -12,7 +12,7 @@
                 <div class="pt-2">
                     <span class="pt-2 text-dark"><%= product.name %></span>
                     <p class="text-dark text-center"><%= product.price %>€</span><br>
-                    <a href="/add-to-cart/<%= product.name %>" 
+                    <a href="/add-to-cart/<%= product.name %>"
                         class="btn btn-outline ironColor btn-sm float-right mb-5" ><i class="fas fa-cart-plus"></i></a>
                 </div>
             </div>
